Add favicon to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
         <meta name="keywords" content="Family Favourites, Restaurant, Delicious Meals, Cozy Atmosphere, Friendly Service, Book Table">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- Favicon link -->
+        <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
