Add logo and register/sign-in link to nav bar in the base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,16 @@
         <!-- Navigation -->
         <header>
             <nav>
-                <ul>
+                <ul class="nav-links">
                     <li><a href="{{ index_url }}">Home</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Contact</a></li>
+                </ul>
+                <div class="logo-container">
+                    <img src="{% static 'images/family-favourites-logo.svg' %}" alt="Family Favourites Logo">
+                </div>
+                <ul class="nav-links">
+                    <li><a href="#">Register/Sign In</a></li>
                 </ul>
             </nav>
         </header>
