--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <!-- Hero image -->
     <div>
-        <img src="{% static 'images/home-hero-image.jpg' %}" alt="Roast meats for carving and Yorkshire Puddings" style="width:100%; height:auto;">
+        <img src="{% static 'images/home-hero-image.webp' %}" alt="Roast meats for carving and Yorkshire Puddings" style="width:100%; height:auto;">
     </div>
 
     <!-- About -->
