--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,17 +4,19 @@
 {% block content %}
 
 <!-- Home Page Content index.html -->
-<div class="container-fluid">
+<div class="container-fluid mt-2 mb-2">
     <!-- Hero image -->
     <div>
-        <img src="{% static 'images/home-hero-image.webp' %}" alt="Roast meats for carving and Yorkshire Puddings" style="width:100%; height:auto;">
+        <img src="{% static 'images/home-hero-image.webp' %}" class="card-img-top mb-2" alt="Roast meats for carving and Yorkshire Puddings" style="width:100%; height:auto;">
     </div>
 
     <!-- About -->
-    <div class="about-section">
-        <h2>About Us</h2>
-        <p>Welcome to Family Favourites, where we serve up delicious meals in a cozy atmosphere. Since 1990, we've been dedicated to providing friendly service and memorable dining experiences. Whether you're craving classic comfort food or something new, our menu has something for everyone. Book your table today and join us for a meal that feels like home!</p>
-        <a href="#" class="btn">Book a Table</a>
+    <div class="card">
+        <div class="about-section card-body">
+            <h2 class="card-title">About Us</h2>
+            <p class="card-text">Welcome to Family Favourites, where we serve up delicious meals in a cozy atmosphere. Since 1990, we've been dedicated to providing friendly service and memorable dining experiences. Whether you're craving classic comfort food or something new, our menu has something for everyone. Book your table today and join us for a meal that feels like home!</p>
+            <a href="{% url 'book_a_table' %}" class="btn btn-primary">Book a Table</a>
+        </div>
     </div>
 </div>
 
