--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 
 <!-- App_url links -->
 {% url "index" as index_url %}
+{% url "book_a_table" as book_a_table_url %}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -20,6 +21,9 @@
         <!-- Favicon link -->
         <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> 
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
@@ -29,20 +33,81 @@
         <![endif]-->
 
         <!-- Navigation -->
-        <header>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="{{ index_url }}">Home</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <div class="logo-container">
-                    <img src="{% static 'images/family-favourites-logo.svg' %}" alt="Family Favourites Logo">
+        <header class="header">
+            <div class="container-fluid justify-content-between">
+                <div class="row align-items-center text-left">                    
+
+                    <!-- Nav Links -->
+                    <div class="col-lg-4 nav-links-container">                 
+                        <nav class="navbar navbar-expand-lg justify-align-content-between nav-underline">
+                            <div class="text-align-bottom" role="navigation">
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="nav-links collapse navbar-collapse" id="navbarText">
+                                    <ul class="nav-list navbar-nav me-auto mb-2 mb-lg-0">
+                                        <li class="nav-item m-2 p-2">
+                                            <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}" href="{% url 'index' %}">Home</a>
+                                        </li>
+                                        <li class="nav-item my-2 py-2">
+                                            <a class="nav-link {% if request.path == menu_url %}active" aria-current="page{% endif %}" href="#menu">Menu</a>
+                                        </li>
+                                        <li class="nav-item m-2 p-2">
+                                            <a class="nav-link {% if request.path == contact_url %}active" aria-current="page{% endif %}" href="#contact">Contact</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </nav>
+                    </div>
+
+                    <!-- logo -->
+                    <div class="col-lg-4 logo-container">
+                        <div class="header-logo text-center">
+                            <a href="{% url 'index' %}" class="logo-link">
+                                <img src="{% static 'images/logo.webp' %}" alt="Family Favourites Logo">
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Register and Book a table -->      
+                    <div class="col-lg-4 register-book-container">    
+                            <!-- User Authentication Links -->
+                        <div class="header_auth d-flex justify-content-end align-items-center">     
+                            <div class="navbar-nav nav-underline" role="navigation">                                        
+                                    <div>
+                                        <li class="dropdown m-2 p-2 ">
+                                                <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    Register/Login
+                                                </a>
+                                                <ul class="dropdown-menu">
+                                                    </li>
+                                                    {% if user.is_authenticated %}
+                                                    <li class="dropdown-item">
+                                                        <a class="dropdown-link {% if request.path == logout_url %}active" aria-current="page{% endif %}" href="#account_logout">Logout</a>
+                                                    </li>
+                                                    {% else %}
+                                                    <li class="dropdown-item">
+                                                        <a class="dropdown-link {% if request.path == signup_url %}active" aria-current="page{% endif %}"
+                                                            href="#account_signup">Register</a>
+                                                    </li>
+                                                    <li class="dropdown-item">
+                                                        <a class="dropdown-link {% if request.path == login_url %}active" aria-current="page{% endif %}" href="#account_login">Login</a>
+                                                    </li>
+                                                    {% endif %}
+                                                </ul>
+                                    </div>
+                                </div>
+                                <div class="register header_primary">
+                                    <button class="book-table-btn btn btn-primary m-2 p-2">
+                                        <a class="nav-link {% if request.path == book_a_table_url %}active" aria-current="page{% endif %}" href="{% url 'book_a_table' %}">Book a Table</a>
+                                    </button>
+                                </div>
+                        </div>
+                        
+                    </div>
                 </div>
-                <ul class="nav-links">
-                    <li><a href="#">Register/Sign In</a></li>
-                </ul>
-            </nav>
+            </div>
         </header>
 
         <!-- Main Content -->
@@ -51,18 +116,26 @@
          {% endblock content %}
 
         <!-- Footer -->
-        <footer>
+        <footer class="footer mt-auto">
             <p>&copy; 2024 Family Favourites. All rights reserved.</p>
 
         <!-- Footer Social -->
-            <div class="social-icons">
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (opens in a new tab)"><img src="{% static 'images/facebook-icon.png' %}" alt="Facebook"></a>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (opens in a new tab)"><img src="{% static 'images/twitter-icon.png' %}" alt="Twitter"></a>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (opens in a new tab)"><img src="{% static 'images/instagram-icon.png' %}" alt="Instagram"></a>
-                <a href="#" aria-label="Contact us by email"><img src={% static "images/envelope-icon.png" %} alt="Email"></a>
+             <div class="social-icons">
+                <p>Keep in touch on our social media</p>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#" aria-label="Contact us by email"><i class="fa-solid fa-square-envelope"></i></a>
+                <p>This website is for educational purposes only.</p>
             </div>
         </footer>
-        
+   
+        <!-- Bootstrap JS Bundle with Popper -->        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+
+        <!-- Font Awesome kit -->
+        <script src="https://kit.fontawesome.com/b8fa29ed25.js" crossorigin="anonymous"></script>
+
         <script src="" async defer></script>
     </body>
 </html>
