Add style to fit smaller screens

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,14 +4,14 @@
 {% block content %}
 
 <!-- Home Page Content index.html -->
-<div class="container-fluid mt-2 mb-2">
+<div class="container-fluid row mx-2 my-2 ">
     <!-- Hero image -->
-    <div>
+    <div class="col-12">
         <img src="{% static 'images/home-hero-image.webp' %}" class="card-img-top mb-2" alt="Roast meats for carving and Yorkshire Puddings" style="width:100%; height:auto;">
     </div>
 
     <!-- About -->
-    <div class="card">
+    <div class="card col-12">
         <div class="about-section card-body">
             <h2 class="card-title">About Us</h2>
             <p class="card-text">Welcome to Family Favourites, where we serve up delicious meals in a cozy atmosphere. Since 1990, we've been dedicated to providing friendly service and memorable dining experiences. Whether you're craving classic comfort food or something new, our menu has something for everyone. Book your table today and join us for a meal that feels like home!</p>
