Styling the index.html page for responsiveness

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,9 +4,9 @@
 {% block content %}
 
 <!-- Home Page Content index.html -->
-<div class="container-fluid row mx-2 my-2 ">
+<div class="container-fluid row mx-0 my-2 ">
     <!-- Hero image -->
-    <div class="col-12">
+    <div class="hero-img col-12 my-1">
         <img src="{% static 'images/home-hero-image.webp' %}" class="card-img-top mb-2" alt="Roast meats for carving and Yorkshire Puddings" style="width:100%; height:auto;">
     </div>
 
