--- a/book_a_table/templates/book_a_table/book_a_table.html
+++ b/book_a_table/templates/book_a_table/book_a_table.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %}Book a Table{% endblock %}
 
@@ -13,14 +14,20 @@
 </div>
 
 <!-- Add booking a table using Bootstrap 5.3.0 -->
-<div class="container mt-5">
-    <h1 class="mb-4">Book a Table</h1>
-    <form method="post" action="{% url 'book_a_table' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Book Now</button>
-        <a href="{% url 'book_a_table' %}" class="btn btn-secondary">Cancel</a>
-    </form>
+<div class="container-fluid my-2">
+    <div class="card">
+        <h2 class="card-header text-center mb-4">Book a Table</h2>
+        <div class="card-body">
+            <div class="book-a-table row g-3 text-center">
+                <form method="post" action="{% url 'book_a_table' %}" class="col col-sm-4">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button type="submit" class="btn btn-primary mb-3 mx-4">Book Now</button>
+                    <a href="{% url 'book_a_table' %}" class="btn btn-secondary mx-4">Cancel</a>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
