--- a/book_a_table/templates/book_a_table/book_a_table.html
+++ b/book_a_table/templates/book_a_table/book_a_table.html
@@ -18,11 +18,11 @@
     <div class="card">
         <h2 class="card-header text-center mb-4">Book a Table</h2>
         <div class="card-body">
-            <div class="book-a-table row g-3 text-center">
-                <form method="post" action="{% url 'book_a_table' %}" class="col col-sm-4">
+            <div class="book-a-table row g-3 justify-content-center text-center">
+                <form method="post" action="{% url 'book_a_table' %}" class="col col-sm-4 col-md-8">
                     {% csrf_token %}
                     {{ form | crispy }}
-                    <button type="submit" class="btn btn-primary mb-3 mx-4">Book Now</button>
+                    <button type="submit" class="book-now-btn btn btn-primary mx-4">Book Now</button>
                     <a href="{% url 'book_a_table' %}" class="btn btn-secondary mx-4">Cancel</a>
                 </form>
             </div>
