Install django-allauth and add to requirements.txt, settings.py, urls.py, and base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,9 @@
 <!-- App_url links -->
 {% url "index" as index_url %}
 {% url "book_a_table" as book_a_table_url %}
+{% url "account_login" as login_url %}
+{% url "account_signup" as signup_url %}
+{% url "account_logout" as logout_url %}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
