--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,17 +5,30 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock head_title %}
 
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<div class="container-fluid">
+  <div class="signup-container">
+    <div class="row">
+      <div class="col-md-8 mt-3 offset-md-2">   
+        <h3>{% trans "Sign Out" %}</h3>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
+        <p>{% trans 'Are you sure you want to sign out?' %}</p>
+      </div>
+    </div>
+      <div class="row">
+        <div class="col-md-8 mt-3 offset-md-2">  
 
+        <form method="post" action="{% url 'account_logout' %}">
+          {% csrf_token %}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+          {% endif %}
+          <button type="submit">{% trans 'Sign Out' %}</button>
+          <a href="{{ booking_url }}" class="btn action-btn mb-2 px-2 mx-2">Cancel</a>
+        </form>
+      </div>  
+    </div>
+  </div>
+</div>
 
 {% endblock content %}
