--- a/templates/base.html
+++ b/templates/base.html
@@ -125,13 +125,25 @@
         <footer class="footer container-fluid mt-auto">
             <div class="row">
                 <!-- Copyright -->
-                <div class="copyright col-12 col-md-6 col-lg-6">
-                    <p class="copy-icon">&copy; 2024 Family Favourites. All rights reserved.</p>
+                <div class="copyright col-12 col-md-6 col-lg-3">
+                    <p class="copy-icon">&copy; 2025 Family Favourites. All rights reserved.</p>
                     <p class="education">This website is for educational purposes only.</p>
                 </div>
-
+                <!-- Address -->
+                <div class="contact-us col-12 col-md-6 col-lg-3">
+                    <h5 classs="contact-title">Contact Us</h5>
+                    <p class="contact-text contact-address">25 Restaurant Street, London, NW1 4BY</p>
+                    <p class="contact-text contact-telephone">Tel: 020 2025 1504</p>
+                </div>
+                <!-- Opening and Serving Times -->
+                <div class="times col-12 col-md-6 col-lg-3">
+                    <h5 classs="opening-time-title">Opening Times</h5>
+                    <p class="time-text opening-times">Mon - Sun: 12pm - 10pm</p>
+                    <h5 classs="serving-time-title">Serving Times</h5>
+                    <p class="time-text serving-times">Mon - Sun: 12pm - 9pm</p>
+                </div> 
                 <!-- Footer Social -->
-                <div class="social-icons col-12 col-md-6 col-lg-6">
+                <div class="social-icons col-12 col-md-6 col-lg-3">
                     <p>Keep in touch on our social media</p>
                     <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
                     <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
