--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -15,7 +15,7 @@
 
 <!-- Add booking a table using Bootstrap 5.3.0 -->
 <div class="container-fluid my-2">
-    <div class="card">
+    <div class="card h-auto">
         <h2 class="card-header text-center mb-4">Contact Us</h2>
         <div class="card-body">
             <div class="book-a-table row g-3 justify-content-center text-center">
