--- a/templates/base.html
+++ b/templates/base.html
@@ -136,6 +136,16 @@
                     <h5 classs="contact-title">Contact Us</h5>
                     <p class="contact-text contact-address">25 Restaurant Street, London, NW1 4BY</p>
                     <p class="contact-text contact-telephone">Tel: 020 2025 1504</p>
+                    <!-- 
+                    If user is logged in when they click the book now button, they will be directed to the book a table page, if not they will be directed to the login page.
+                    If user clicks the contact button they will be directed to the contact page 
+                    -->
+                    <a href="{% url 'contact' %}" class="btn btn-primary btn-sm">Contact us</a>
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'book_a_table' %}" class="btn btn-primary btn-sm">Book now!</a>
+                    {% else %}
+                    <a href="{{ login_url }}" class="btn btn-primary btn-sm">Book now!</a>
+                    {% endif %}
                 </div>
                 <!-- Opening and Serving Times -->
                 <div class="times col-12 col-md-6 col-lg-3">
