--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -13,7 +13,7 @@
     {% endfor %}
 </div>
 
-<!-- Add booking a table using Bootstrap 5.3.0 -->
+<!-- Add contact us using Bootstrap 5.3.0 -->
 <div class="container-fluid my-2">
     <div class="card h-auto">
         <h2 class="card-header text-center mb-4">Contact Us</h2>
