--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 {% url "book_a_table" as book_a_table_url %}
 {% url "contact" as contact_url %}
 {% url "register" as register_url %}
+{% url "menu" as menu_url %}
 {% url "account_login" as login_url %}
 {% url "account_signup" as signup_url %}
 {% url "account_logout" as logout_url %}
