--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -1,48 +1,95 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% load crispy_forms_tags %}
-
 {% block title %}Menus{% endblock %}
 
 {% block content %}
 
 <div class="container-fluid my-2 py-2">
     <h1 class="card-header text-center mb-4">Menus</h1>
-    <ul class="nav nav-tabs justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#Main">{{ main_title }}</a>
-            <div class="card h-auto col col-6 col-4">
-                <h3 class="card-title">
-                    {{ sub_menu_title }}
-                </h3>
-                <div class="card-body" style="width: 30rem;">
-                {% for item in menu %}
-                <p><strong>
-                    {{ item.item_name }}
-                    <span class="menu-price">{{ item.price }}</span></strong>
+    <div class="card h-auto col">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Main</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Kids</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Drinks</button>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+
+            </div>
+            <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                <div class="my-2 p-2">
+                    <h3>Pick & Mix</h3>
+                    <p>Pick Either: Main + 2 Veggies or Main + Side + Veggie. 5.00</p>
                     <div>
-                    <p class="card-text">
-                    {{ item.description }}
-                    </p>
+                        <h5>Mains</h5>
+                        <div class="row row-cols-2">
+                            <article class="col p-1">
+                            <p><strong>Two Pork Sausages</strong>
+                            <p class="card-text">Served with gravy.</p>
+                            </article>
+                            <article class="col p-1">
+                            <p><strong>Two Meat-Free Sausages</strong>
+                            <p class="card-text">Served with vegan gravy.</p>
+                            </article>
+                            <article class="col p-1">
+                            <p><strong>Fish Fingers </strong>
+                            <p class="card-text">Three breaded fish fingers.</p>
+                            </article>
+                            <article class="col p-1">
+                            <p><strong>Chicken Nuggets </strong>
+                            <p class="card-text">5 chicken nuggets.</p>
+                            </article>
+                        </div>
                     </div>
-                </p>
-                {% endfor %}
+                    <div class="row row-cols-2">
+                        <section class="col">
+                            <h5>Veggies</h5>
+                            <div>
+                                <article class="col p-1">
+                                <p><strong>Corn on the Cob</strong>
+                                </article>
+                                <article class="col p-1">
+                                <p><strong>Baked Beans</strong>
+                                </article>
+                                <article class="col p-1">
+                                <p><strong>Carrot & Cucumber Sticks</strong>
+                                </article>
+                                <article class="col p-1">
+                                <p><strong>Garden Peas</strong>
+                                </article>
+                            </div>
+                        </section>
+                        <section class="col">
+                            <h5>Sides</h5>
+                            <div>
+                                <article class="col p-1">
+                                <p><strong>Jacket Potato</strong>
+                                </article>
+                                <article class="col p-1">
+                                <p><strong>Mashed Potato</strong>
+                                </article>
+                                <article class="col p-1">
+                                <p><strong>Chips</strong>
+                                </article>
+                                <article class="col p-1">
+                                <p><strong>Garlic Bread</strong>
+                                </article>
+                            </div>
+                        </section>
+                    </div>
                 </div>
             </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#{{ main_title.1 }}">Kids</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#{{ main_title.2 }}">Sunday</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#{{ main_title.3}}{{ main_title.4}}{{ main_title.5}}">Drinks</a>
-        </li>
-    </ul>
+            <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
+            </div>
+        </div>
+   </div>
 </div>
-
-
 
 {% endblock %}
