--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -7,11 +7,11 @@
 
 {% block content %}
 
-<div class="container-fluid">
-  <div class="signup-container">
+<div class="container-fluid my-2">
+  <div class="signup-container card h-auto">
     <div class="row">
       <div class="col-md-8 mt-3 offset-md-2">      
-        <h3>{% trans "Sign In" %}</h3>
+        <h2 class="card-header text-center my-2">{% trans "Sign In" %}</h2>
           <p>{% blocktrans %}Welcome to Family Favourites. If you have not created an account yet, then please
           <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
       </div>
@@ -24,8 +24,8 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-          <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+          <a class="button btn btn-secondary secondaryAction px-2 py-2" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+          <button class="primaryAction btn btn-primary mx-3" type="submit">{% trans "Sign In" %}</button>
         </form>
       </div>  
     </div>
