--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
@@ -6,11 +6,11 @@
 
 {% block content %}
 
-<div class="container-fluid">
-  <div class="signup-container">
+<div class="container-fluid my-2">
+  <div class="signup-container card h-auto">
     <div class="row">
       <div class="col-md-8 mt-3 offset-md-2">   
-        <h3>{% trans "Sign Out" %}</h3>
+        <h2 class="card-header text-center my-2">{% trans "Sign Out" %}</h2>
 
         <p>{% trans 'Are you sure you want to sign out?' %}</p>
       </div>
@@ -23,8 +23,8 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
           {% endif %}
-          <button type="submit">{% trans 'Sign Out' %}</button>
-          <a href="{{ booking_url }}" class="btn action-btn mb-2 px-2 mx-2">Cancel</a>
+          <button class="btn btn-primary" type="submit">{% trans 'Sign Out' %}</button>
+          <a href="{{ booking_url }}" class="btn btn-primary action-btn mb-2 px-2 mx-2">Cancel</a>
         </form>
       </div>  
     </div>
