--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,4 +1,5 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
+{% load static %}
 
 {% load i18n %}
 
@@ -6,13 +7,13 @@
 
 {% block content %}
 
-<div class="container-fluid">
-  <div class="signup-container">
+<div class="container-fluid my-2">
+  <div class="signup-container card h-auto">
     <div class="row">
       <div class="col-md-8 mt-3 offset-md-2"> 
-        <h3>{% trans "Sign Up" %}</h3>
+        <h2 class="card-header text-center my-2">{% trans "Sign Up" %}</h2>
 
-        <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+        <p class="py-1">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
         <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
           {% csrf_token %}
@@ -20,7 +21,7 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+          <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
         </form>
       </div>  
     </div>
