--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
         <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -48,7 +48,7 @@
                     <div class="col-md-2 col-lg-4 nav-links-container">                 
                         <nav class="navbar navbar-expand-lg justify-content-center nav-underline">
                             <div class="text-align-bottom" role="navigation">
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                                <button class="navbar-toggler btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div class="nav-links collapse navbar-collapse" id="navbarText">
@@ -80,37 +80,41 @@
                     <!-- Register and Book a table -->      
                     <div class="col-md-6 col-lg-4 register-book-container">    
                             <!-- User Authentication Links -->
-                        <div class="d-flex justify-content-end">     
-                            
-                                <div class="register"> 
-                               
-                                        <div class="dropdown m-2 p-2">
-                                            <a class="dropdown-toggle m-2 p-2 btn btn-primary {% if request.path == register_url %}active" aria-current="page{% endif %}" href="{{ register_url }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <div class="navbar navbar-expand-lg d-flex justify-content-end">
+                            <div class="text-align-bottom" role="navigation">
+                                <button class="navbar-toggler btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="register collapse navbar-collapse">
+                                    <div class="navbar-nav">
+                                    <div class="nav-item dropdown m-2 p-2">
+                                        <a class="dropdown-toggle m-2 p-2 btn btn-primary" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                             Register/Login
-                                            </a>
-                                            
-                                            <ul class="dropdown-menu">
-                                                {% if user.is_authenticated %}
-                                                <li>
-                                                    <a class="dropdown-item {% if request.path == logout_url %}active" aria-current="page{% endif %}" href="{{ logout_url }}">Logout</a>
-                                                </li>
-                                                {% else %}
-                                                <li>
-                                                    <a class="dropdown-item {% if request.path == signup_url %}active" aria-current="page{% endif %}" href="{{ signup_url }}">Register</a>
-                                                </li>
-                                                <li>
-                                                    <a class="dropdown-item {% if request.path == login_url %}active" aria-current="page{% endif %}" href="{{ login_url }}">Login</a>
-                                                </li>
-                                                {% endif %}
-                                            </ul>
-                                        </div>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            {% if user.is_authenticated %}
+                                            <li>
+                                                <a class="dropdown-item {% if request.path == logout_url %}active" aria-current="page{% endif %}" href="{{ logout_url }}">Logout</a>
+                                            </li>
+                                            {% else %}
+                                            <li>
+                                            <a class="dropdown-item {% if request.path == signup_url %}active" aria-current="page{% endif %}" href="{{ signup_url }}">Register</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item {% if request.path == login_url %}active" aria-current="page{% endif %}" href="{{ login_url }}">Login</a>
+                                            </li>
+                                            {% endif %}
+                                        </ul>
+                                    </div>
+                                    </div>
                                 </div>
+                            </div>
                                 <div class="book-a-table m-2 p-2">
                                     <button class="book-table-btn btn btn-primary hidden m-2 p-2">
                                         <a class="nav-link {% if request.path == book_a_table_url %}active" aria-current="page{% endif %}" href="{% url 'book_a_table' %}">Book a Table</a>
                                     </button>
                                 </div>
-                          
+                            
                             
                         </div>
                     </div>
@@ -166,8 +170,8 @@
             </div>
         </footer>
    
-        <!-- Bootstrap JS Bundle with Popper -->        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+        <!-- Bootstrap JS Bundle with Popper -->     
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
         <!-- Font Awesome kit -->
         <script src="https://kit.fontawesome.com/b8fa29ed25.js" crossorigin="anonymous"></script>
